devscripts (2.10.65) UNRELEASED; urgency=low

  [ James Vega ]
  * Remove mergechanges from the set of commands which use completion of
    package names.  (Closes: #578167)

  [ Martin Zobel-Helas ]
  * Remove svk from Recommends, it is no longer in the archive. (Closes:
    #581224)

  [ Raphael Geissert ]
  * checkbashisms:
    + Makefile handling:
      - Simplify make variables as shell variables.  (Closes: #535368)
      - Convert all $$ to $.
      - Recognize SHELL setting in Makefile when being set as an override.
      - Ignore make's '-' for ignore errors.
      - Fix some false positives due to target names.
    + Detect incorrect use of ^ instead of ! for negation in pattern matching
      collections.  (Closes: #497489)
    + Detect use of {post,pre}{increment,decrement} in arithmetic expansion.
      (Closes: #572006)
    + Detect use of Bash's “printf -v var ...” or the %b and %q format
      specifiers.
    + Detect use of the Bash's “coproc” keyword.
    + Detect use of Bash's “;;&” and ”;&” operators.
    + Add support for handling line continuations.  (Closes: #531327)
    + Fix a false positive with file redirection.
    + Fix handling of indented heredoc delimiters.
    + Fix some parsing of quoted strings.

 -- Martin Zobel-Helas <zobel@debian.org>  Tue, 11 May 2010 20:48:16 +0200

devscripts (2.10.64) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * devscripts.1: generic documentation for $DEBEMAIL and $DEBFULLNAME

  [ James Vega ]
  * Devscripts::Versort: Correct _versort so the lists it returns aren't
    shorter than the ones passed in to _versort.  (Closes: #577654)
  * debcheckout: Switch from using the Switch module to Perl 5.10's switch
    feature.

 -- James Vega <jamessan@debian.org>  Tue, 13 Apr 2010 23:46:10 -0400

devscripts (2.10.63) unstable; urgency=low

  [ Christoph Berg ]
  * debcheckout: inject extra slash in "hg ssh://hg.debian.org//" URLs so
    paths are not based in the user's $HOME.

  [ James Vega ]