@@ -27,8 +27,7 @@ And now, in mostly alphabetical order, the scripts:
 - bts: A command-line tool for accessing the BTS, both to
   send mails to control@bts.debian.org and to access the web pages and
   SOAP interface of the BTS. [www-browser, libauthen-sasl-perl, 
-  libnet-smtp-ssl-perl, libsoap-lite-perl, libwww-perl, bsd-mailx |
-  mailx | mailutils]
+  libnet-smtp-ssl-perl, libsoap-lite-perl, libwww-perl, bsd-mailx | mailx]
 
 - build-rdeps: Searches for all packages that build-depend on a given package
   [dctrl-tools]
@@ -170,7 +169,7 @@ And now, in mostly alphabetical order, the scripts:
 
 - manpage-alert: locate binaries without corresponding manpages. [man-db]
 
-- mass-bug: mass-file bug reports [bsd-mailx | mailx | mailutils]
+- mass-bug: mass-file bug reports [bsd-mailx | mailx]
 
 - mergechanges: merge .changes files from the same release but built
   on different architectures.
@@ -189,7 +188,7 @@ And now, in mostly alphabetical order, the scripts:
   gnuplot. [libtimedate-perl, gnuplot]
 
 - pts-subscribe: subscribe to the PTS (Package Tracking System) for a
-  limited period of time. [bsd-mailx | mailx | mailutils, at]
+  limited period of time. [bsd-mailx | mailx, at]
 
 - rc-alert: list installed packages which have release-critical bugs [wget]
 
