@@ -17,7 +17,7 @@ Recommends: at, curl | wget, dctrl-tools, debian-keyring, debian-maintainers,
  dput | dupload, equivs, fakeroot, gnupg, libauthen-sasl-perl,
  libcrypt-ssleay-perl, libparse-debcontrol-perl, libsoap-lite-perl,
  libterm-size-perl, libtimedate-perl, liburi-perl, libwww-perl,
- libyaml-syck-perl, lintian, lsb-release, bsd-mailx | mailx | mailutils, 
+ libyaml-syck-perl, lintian, lsb-release, bsd-mailx | mailx,
  man-db, patch, patchutils, ssh-client, strace, unzip, wdiff, www-browser,
  subversion | cvs | darcs | tla | bzr | git-core | mercurial, lzma,
  xz-utils, sensible-utils, libjson-perl
@@ -33,7 +33,7 @@ Description: scripts to make the life of a Debian Package maintainer easier
   - archpath: print tla/Bazaar package names [tla | bazaar]
   - bts: a command-line tool for manipulating the BTS [www-browser,
     libauthen-sasl-perl, libnet-smtp-ssl-perl, libsoap-lite-perl, libwww-perl,
-    bsd-mailx | mailx | mailutils]
+    bsd-mailx | mailx]
   - build-rdeps: Searches for all packages that build-depend on a
     given package [dctrl-tools]
   - chdist: tool to easily play with several distributions [dctrl-tools]
@@ -96,7 +96,7 @@ Description: scripts to make the life of a Debian Package maintainer easier
   - licensecheck: attempt to determine the license of source files
   - list-unreleased: searches for unreleased packages
   - manpage-alert: locate binaries without corresponding manpages [man-db]
-  - mass-bug: mass-file bug reports [bsd-mailx | mailx | mailutils]
+  - mass-bug: mass-file bug reports [bsd-mailx | mailx]
   - mergechanges: merge .changes files from a package built on different
     architectures
   - mk-build-deps: Given a package name and/or control file, generate a binary
@@ -108,7 +108,7 @@ Description: scripts to make the life of a Debian Package maintainer easier
   - plotchangelog: view a nice plot of the data in a changelog file
     [libtimedate-perl, gnuplot]
   - pts-subscribe: subscribe to the PTS for a limited period of time
-    [bsd-mailx | mailx | mailutils, at]
+    [bsd-mailx | mailx, at]
   - rc-alert: list installed packages which have release-critical bugs [wget]
   - rmadison: remotely query the Debian archive database about packages
     [wget | curl, liburi-perl]
